# x-transcript

./: .env.example  .gitignore  README.md  cli.py  cli_test.py  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/routes/: health.py  jobs.py
app/services/: downloader.py  exporter.py  extractor.py  orchestrator.py  transcriber.py
app/workers/: transcriber_worker.py
docker/: Dockerfile  Dockerfile.worker  nginx.conf
tests/: test_extractor.py
